// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info BannerNotices renders with dismiss 1`] = `
<div>
  <div
    class="wcpay-banner-notice wcpay-banner-info-notice wcpaytest-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-banner-notice__content wcpay-banner-info-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Dismiss this notice"
      class="components-button components-notice__dismiss has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info BannerNotices renders with dismiss and icon 1`] = `
<div>
  <div
    class="wcpay-banner-notice wcpay-banner-info-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-banner-notice__icon wcpay-banner-info-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <span
            class="dashicon dashicons dashicons-info"
          />
        </div>
        <div
          class="components-flex-item wcpay-banner-notice__content wcpay-banner-info-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Dismiss this notice"
      class="components-button components-notice__dismiss has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info BannerNotices renders with dismiss and icon and actions 1`] = `
<div>
  <div
    class="wcpay-banner-notice wcpay-banner-info-notice components-notice is-info is-dismissible"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-banner-notice__content wcpay-banner-info-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
          <div
            class="components-flex wcpay-banner-notice__content__actions css-azptjn-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
            data-wp-c16t="true"
            data-wp-component="Flex"
          >
            <button
              class="components-button wcpay-banner-notice__action"
              type="button"
            >
              Button
            </button>
            <a
              class="wcpay-banner-notice__action"
              href="https://wordpress.com"
            >
              URL
            </a>
          </div>
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
    <button
      aria-label="Dismiss this notice"
      class="components-button components-notice__dismiss has-icon"
      type="button"
    >
      <svg
        aria-hidden="true"
        focusable="false"
        size="24"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Info BannerNotices renders without dismiss and icon 1`] = `
<div>
  <div
    class="wcpay-banner-notice wcpay-banner-info-notice components-notice is-info"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-banner-notice__content wcpay-banner-info-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Test notice content
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
